--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
               </div>
             </div>
           </nav>
+          <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, harum!</p>
+          </div>
     </header>
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
         <div class="container">
