--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
               </div>
             </div>
           </nav>
-
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, excepturi.</p>
+          <div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, excepturi.</p>
+          </div>
     </header>
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
         <div class="container">
