--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           </nav>
           <div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, excepturi.</p>
+            <p>nuevo parrafo</p>
           </div>
     </header>
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
