Feature/martin navbar (#1)
* codigo modificado

* generando conflicto en github

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
               </div>
             </div>
           </nav>
-          <div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, excepturi.</p>
-          </div>
+            <p>nuevo parrafo</p>
     </header>
     <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
         <div class="container">
